@@ -13,6 +13,8 @@ Improvements:
    `bind diff F :set diff-options = --full-diff`. (GH #69, #116)
  - Add a diff-options setting for specifying default diff options.
    Example: `set diff-options = --patience`. (GH #116)
+ - Options in diff-options and blame-options matching tig browsing state
+   variables are replaced.
  - Add toggles for showing author email or email user names. (GH #115)
  - Open editor at the selected line by prefixing the file argument with
    `+<lineno>`. Tested in vi, vim, emacs, nano, gedit, geany. Disable
